docs/dolfin/1.1.0/cpp/source/programmers-reference/la/PETScPreconditioner.rst

.. Documentation for the header file dolfin/la/PETScPreconditioner.h

.. _programmers_reference_cpp_la_petscpreconditioner:

PETScPreconditioner.h
=====================

.. note::
    
    The documentation on this page was automatically extracted from the
    DOLFIN C++ code and may need to be edited or expanded.
    

.. cpp:class:: PETScPreconditioner

    *Parent class(es)*
    
        * :cpp:class:`PETScObject`
        
        * :cpp:class:`GenericPreconditioner`
        
        * :cpp:class:`Variable`
        
    This class is a wrapper for configuring PETSc preconditioners. It does
    not own a preconditioner. It can take a PETScKrylovSolver and set the
    preconditioner type and parameters.


    .. cpp:function:: explicit PETScPreconditioner(std::string type = "default")
    
        Create a particular preconditioner object


    .. cpp:function:: void set(PETScKrylovSolver& solver) const
    
        Set the precondtioner type and parameters


    .. cpp:function:: void set_nullspace(const std::vector<const GenericVector*> nullspace)
    
        Set the (approximate) null space of the preconditioner operator
        (matrix). This is required for certain preconditioner types,
        e.g. smoothed aggregation multigrid


    .. cpp:function:: boost::shared_ptr<const MatNullSpace> nullspace() const
    
        Return the PETSc null space


    .. cpp:function:: std::string str(bool verbose) const
    
        Return informal string representation (pretty-print)


    .. cpp:function:: static std::vector<std::pair<std::string, std::string> > preconditioners()
    
        Rerturn a list of available preconditioners


    .. cpp:function:: static Parameters default_parameters()
    
        Default parameter values


